# Penguine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  Penguine.sln  Penguine.slnx
MyGame/: MyGame.cpp  MyGame.vcxproj
Penguine/: Api.h  App.cpp  App.h  App.ixx  Component.ixx  ComponentGroup.ixx  ComponentManager.ixx  ECS.h  ECS.ixx  Entity.ixx  EntityManager.ixx  Event.cpp  Event.h  InternalWindow.h  Log.h  Main.h  Mathematics.ixx  Node.h  Penguine.aps  Penguine.cxx  Penguine.h  Penguine.vcxproj  Penguine.vcxproj.filters  Scene.h  System.ixx  SystemManager.ixx  Vec.h  Window.h  Window.ixx
PenguineCore/: Api.hpp  Application.cpp  PenguineCore.hpp  PenguineCore.vcxproj  PenguineCore.vcxproj.filters
TestGame/: TestApp.cpp  (+1 more)
penguine_core/: CMakeLists.txt  CMakePresets.json
penguine_core/.VSCodeCounter/2025-10-19_20-58-15/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
penguine_core/.VSCodeCounter/2025-10-19_20-58-21/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
penguine_core/.VSCodeCounter/2025-10-19_20-58-49/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
penguine_core/.VSCodeCounter/2025-10-19_20-59-09/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
penguine_core/.VSCodeCounter/2025-10-19_20-59-20/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
penguine_core/.VSCodeCounter/2025-10-20_21-46-59/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
penguine_core/.VSCodeCounter/2025-10-20_21-47-10/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
penguine_core/include/: app.h  event.h  global.h  main.h  node.h  resource.h  resource_manager.h  scene.h  window.h
penguine_core/include/entity/: tickable.h  viewable.h
penguine_core/include/render/: camera.h  layer.h  mesh.h  renderer.h  shader.h  texture.h
penguine_core/lib/: RGFW.h
penguine_core/lib/glad/: gl.h
penguine_core/resources/: app.json  entities.json  resources.json  test.frag  test.vert  testscene.json
penguine_core/src/: app.cc  event.cc  main.cc  node.cc  resource.c  resource.cc  resource_manager.cc  scene.cc  window.cc
penguine_core/src/entity/: tickable.cc  viewable.cc
penguine_core/src/impl/: glad.c  rgfw.c  tinygltf.cc
penguine_core/src/render/: camera.cc  layer.cc  mesh.cc  renderer.cc  shader.cc  texture.cc
(+18 files in other folders)
